Bug 1057928 (part 1) - In SpanningCellSorter, use |ops| instead of |entryCount| to indicate table liveness. r=dbaron.