layout/tables/SpanningCellSorter.cpp
@@ -19,14 +19,14 @@ SpanningCellSorter::SpanningCellSorter()
   , mSortedHashTable(nullptr)
 {
     memset(mArray, 0, sizeof(mArray));
-    mHashTable.entryCount = 0;
+    mHashTable.ops = nullptr;
 }
 
 SpanningCellSorter::~SpanningCellSorter()
 {
-    if (mHashTable.entryCount) {
+    if (mHashTable.ops) {
         PL_DHashTableFinish(&mHashTable);
-        mHashTable.entryCount = 0;
+        mHashTable.ops = nullptr;
     }
     delete [] mSortedHashTable;
 }
@@ -75,7 +75,7 @@ SpanningCellSorter::AddCell(int32_t aColSpan, int32_t aRow, int32_t aCol)
         i->next = mArray[index];
         mArray[index] = i;
     } else {
-        if (!mHashTable.entryCount) {
+        if (!mHashTable.ops) {
             PL_DHashTableInit(&mHashTable, &HashTableOps, nullptr,
                               sizeof(HashTableEntry));
         }
@@ -151,7 +151,7 @@ SpanningCellSorter::GetNext(int32_t *aColSpan)
             /* prepare to enumerate the hash */
             mState = ENUMERATING_HASH;
             mEnumerationIndex = 0;
-            if (mHashTable.entryCount) {
+            if (mHashTable.ops) {
                 HashTableEntry **sh =
                     new HashTableEntry*[mHashTable.entryCount];
                 if (!sh) {
@@ -166,7 +166,7 @@ SpanningCellSorter::GetNext(int32_t *aColSpan)
             }
             /* fall through */
         case ENUMERATING_HASH:
-            if (mEnumerationIndex < mHashTable.entryCount) {
+            if (mHashTable.ops && mEnumerationIndex < mHashTable.entryCount) {
                 Item *result = mSortedHashTable[mEnumerationIndex]->mItems;
                 *aColSpan = mSortedHashTable[mEnumerationIndex]->mColSpan;
                 NS_ASSERTION(result, "holes in hash table");
